# gen-ai-ollama

./: 1_ollama.ipynb  2_info_in_prompt.ipynb  3_embedding_facts.ipynb  4_simple_RAG_ollama.ipynb  5_chromadb.ipynb  6_llamaindex_PDF_RAG.ipynb  7_agent_query_dataframes.ipynb  README.md  pyproject.toml
