[project]
name = "gen-ai-ollama"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.10",
    "faiss-cpu>=1.11.0",
    "jupyter>=1.1.1",
    "llama-index>=0.12.37",
    "llama-index-embeddings-ollama>=0.6.0",
    "llama-index-vector-stores-chroma>=0.4.1",
    "llama-index-vector-stores-faiss>=0.4.0",
    "ollama>=0.4.8",
]
