[project]
name = "gen-ai-ollama"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "astroquery>=0.4.10",
    "chromadb>=1.0.10",
    "faiss-cpu>=1.11.0",
    "jupyter>=1.1.1",
    "llama-index>=0.12.37",
    "llama-index-embeddings-ollama>=0.6.0",
    "llama-index-experimental>=0.5.5",
    "llama-index-llms-ollama>=0.5.6",
    "llama-index-vector-stores-chroma>=0.4.1",
    "llama-index-vector-stores-faiss>=0.4.0",
    "ollama>=0.4.8",
    "pandas>=2.2.3",
]
